# haskellship

./: .gitignore  GameBoard.hs  GameBoardSpec.hs  LICENSE  Main.hs  Orientation.hs  Pos.hs  Position.hs  README.md  Vessel.hs  VesselSpec.hs  haskellship.cabal  shots-test.in
auto/: run
src/: GameBoard.hs  Main.hs  Orientation.hs  Pos.hs  Vessel.hs
tests/: Tests.hs
