name:                haskellship
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tomcjohn/haskellship
--license:             BSD3
--license-file:        LICENSE
author:              Tom John
maintainer:          tomcjohn@gmail.com
copyright:           2018 Tom John
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskellship
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
                     , containers
                     , parsec
                     , random
  other-modules:       GameBoard
                     , Orientation
                     , Pos
                     , Vessel
